Atualização sistema farmácia